--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<div class="flex justify-center items-center min-h-screen">
+			<div class="w-[500px] h-[500px] bg-[#161E31] rounded-md ">
+				<slot />
+			</div>
+		</div>
 	</body>
 </html>
 <style is:global>
@@ -27,7 +31,7 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		background-color: #666F9D;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
