--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,15 +10,23 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<!-- <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+		 -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Lato:wght@400;700&family=Noto+Sans:wght@400;700&family=Merriweather:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div class="flex justify-center items-center min-h-screen">
-			<div class="w-[500px] h-[500px] bg-[#161E31] rounded-md ">
+			<div
+				class="portfolio-main min-w-[550px] max-h-[700px] w-[1100px] overflow-y-auto bg-[#161E31] rounded-md m-2"
+			>
 				<slot />
 			</div>
 		</div>
@@ -27,14 +35,57 @@ const { title } = Astro.props;
 <style is:global>
 	:root {
 		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		--accent-gradient: linear-gradient(
+			45deg,
+			rgb(var(--accent)),
+			#da62c4 30%,
+			white 60%
+		);
 	}
+
+	.portfolio-main {
+		overflow-y: auto; /* Ensure it's scrollable */
+	}
+
+	/* WebKit browsers (Chrome, Safari, newer versions of Opera) */
+	.portfolio-main::-webkit-scrollbar {
+		width: 4px; /* Width of the scrollbar */
+	}
+
+	.portfolio-main::-webkit-scrollbar-track {
+		background: transparent; /* Make the track transparent */
+	}
+
+	.portfolio-main::-webkit-scrollbar-thumb {
+		/* background: linear-gradient(
+			to right,
+			#4c7fcb 0%,
+			#43bbff 98.77%
+		); Gradient for the thumb */
+		background-color: theme('colors.bg-light');
+		border-radius: 4px; /* Rounded corners for the thumb */
+	}
+
+	/* Firefox */
+	.portfolio-main {
+		scrollbar-width: thin; /* Make the scrollbar slim */
+		scrollbar-color: #4c7fcb #43bbff; /* Gradient colors for the thumb and track */
+	}
+
 	html {
 		font-family: system-ui, sans-serif;
-		background-color: #666F9D;
+		/* background-color: #666f9d; */
+		background-color: theme('colors.bg');
 	}
 	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+
+	hr {
+		min-width: 81px;
+		border-top: none;
+		border-radius: 20px;
+		min-height: 5px;
 	}
 </style>
